[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Ground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Stick.tscn" type="PackedScene" id=2]
[ext_resource path="res://PlayScence.gd" type="Script" id=3]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.19781, 10 )

[node name="PlayScence" type="Node2D"]
position = Vector2( 144, 408 )
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 56, 0 )
zoom = Vector2( 0.2, 0.2 )

[node name="Ground2" parent="." instance=ExtResource( 1 )]
position = Vector2( -112, 0 )

[node name="Ground1" parent="." instance=ExtResource( 1 )]

[node name="Stick" parent="." instance=ExtResource( 2 )]
position = Vector2( 31.8948, -29.3567 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( -15.8666, -43.1732 )
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Player"]
position = Vector2( 15.8666, 43.1732 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2( -15.8495, -26.0542 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Player/Area2D" to="." method="_on_Area2D_body_entered"]
